@@ -34,7 +34,7 @@ that are otherwise encumbered.
 
 Signed by git commit adding my legal name and git username:
 
-Written in 2010-2015 by David E. Jones - jonesde
+Written in 2010-2016 by David E. Jones - jonesde
 Written in 2015 by Sam Hamilton - samhamilton
 Written in 2015 by Abdullah Shaikh - abdullahs
 Written in 2015 by Yao Chunlin - chunlinyao
@@ -60,7 +60,7 @@ litigation is filed.
 
 Signed by git commit adding my legal name and git username:
 
-Written in 2010-2015 by David E. Jones - jonesde
+Written in 2010-2016 by David E. Jones - jonesde
 Written in 2015 by Yao Chunlin - chunlinyao
 Written in 2015 by Sam Hamilton - samhamilton
 Written in 2015 by Jens Hardings - jenshp
